Update JDK (19 -> 21) and gradle (7.6 -> 8.4)