@@ -7,16 +7,6 @@ version = "0.1-SNAPSHOT"
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(19))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
-}
-tasks.withType<Test> {
-    jvmArgs("--enable-preview")
-}
-tasks.withType<JavaExec> {
-    jvmArgs("--enable-preview")
 }
